Change the algorithm and create new function